Sadece arayüz olacak şkeilde kontrol paneli eklendi. Veri tabanı tabloları ve Entity kodları değiştirildi.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ol": "^10.6.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
