Resim yükleme özelliği eklendi. Resim sayısı çekip sol panelde gösterme eklendi. Resimleri gösterme paneli gerekiyor.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=gisdb;Username=postgres;Password=admin123"
-  }
+  },
+  "ImagesPath" :  "C:\\Users\\mahir\\AppData\\Local\\react-map-app\\images"
 }
